# BugZoo

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  Vagrantfile  api-specification.yml  api.html  banner.txt  broken  build.sh  clean.sh  cli.html  contributing.html  debug.txt  faqs.html  file-format.html  genindex.html  index.html  objects.inv  preprocessed.c  py-modindex.html  pyproject.toml  repair.cache  repairbox  run.sh  run_one.sh  search.html  searchindex.js  setup.py  spin.sh
_modules/: index.html
_sources/: faqs.rst.txt
_static/: documentation_options.js
api/: applications.html  bug.html  bugzoo.html  client.html  commands.html  container.html  coverage.html  exceptions.html  patch.html  test.html
atris-1.0.6/: README.md  prepare.sh
base/: Makefile  README.md  rbox.base.yaml  rbox32.base.yaml
benchmarks/: configuration.base  tidy-php.sh
benchmarks/lighttpd-bug-1806-1807/lighttpd/doc/: CMakeLists.txt  Makefile  Makefile.in  accesslog.txt  authentication.txt  compress.txt  configuration.txt  secdownload.txt  security.txt  ssi.txt  status.txt
benchmarks/lighttpd-bug-1806-1807/lighttpd/doc/.svn/prop-base/: configuration.txt.svn-base
benchmarks/lighttpd-bug-1806-1807/lighttpd/doc/.svn/text-base/: access.txt.svn-base  lighttpd.conf.svn-base  proxy.txt.svn-base  redirect.txt.svn-base  rewrite.txt.svn-base  rrdtool.txt.svn-base  setenv.txt.svn-base  simple-vhost.txt.svn-base  userdir.txt.svn-base
bugzoo/: __init__.py  artefact.py  bug.py  build.py  cli.py  cmd.py  compiler.py  container.py  core.py  dataset.py  errors.py  example  exceptions.py  manager.py  patch.py  source.py  spectra.py  test.py  tool.py  util.py  version.py
ccrypt-1.2/: .gitignore  README.md  setup.json  test.sh
cli/: bug.html  container.html  source.html  tool.html
contributing/: bugs.html  source.html  tools.html
ct/: programs.txt
deroff-ultrix-4.3/: test.sh
docs/: Makefile  api.rst  artefact.rst  cli.rst  conf.py  contributing.rst  examples.rst  file-format.rst  index.rst  installation.rst  integration_artefacts.rst  integration_plugin.rst  make.bat  repairbox.plugin.rst  repairbox.rst  test.rst
examples/: ardu.py  client.py  coverage.py  test.py
gcd/: test.sh
gmp-bug-13420-13421-temp/: cnfm4.tmp  cnfm4i.tmp  compile.pl  configuration-default  fix.lines  reconfigure  test.sh
gzip/: test.head.sh  tidy.sh
gzip-bug-2009-08-16-3fe0caeada-39a362ae9d/: test.sh
indent-1.9.1/: README.md  indent.results.cache
libtiff-bug-2005-12-14-6746b87-0d3d51d/: prepare.sh  setup.json
lighttpd-1.4.17/: README.txt  hoagie.c  lighttpd.conf
lighttpd-bug-1806-1807/: limit
lighttpd-bug-1806-1807/lighttpd/src/: CMakeLists.txt  Makefile.am  Makefile.in  array.h  base.h  buffer.h  chunk.c  configfile.c  connections-glue.c  connections.h  etag.c  fdevent.c  fdevent_freebsd_kqueue.c  fdevent_select.c  filter.c  http-header-glue.c  http_auth.h  http_auth.lo  http_auth_digest.lo  http_req.h  http_req_parser.c  http_req_parser.h  http_req_range.c  http_req_range.h  http_resp.c  http_resp_parser.c  iosocket.h  lighttpd  log.c  md5.c  mod_access.c  mod_accesslog.c  mod_cgi.la  mod_chunked.c  mod_chunked.lo  mod_cml.c  mod_compress.lo  mod_deflate.c  mod_deflate.la  mod_deflate.lo  (+53 more)
lighttpd-bug-1806-1807/lighttpd/src/.deps/: configparser.Po  connections-glue.Po  connections.Po  data_integer.Po  fdevent_linux_sysepoll.Po  fdevent_select.Po  http_req_parser.Po  http_req_range_parser.Po  iosocket.Po  joblist.Po  mod_access.Plo  mod_auth.Plo  mod_cgi.Plo  mod_deflate.Plo  mod_flv_streaming.Plo  mod_magnet_la-mod_magnet.Plo  mod_proxy_backend_ajp13.Plo  mod_proxy_core_backlog.Plo  mod_proxy_core_protocol.Plo  mod_proxy_core_rewrites.Plo  mod_rewrite.Plo  mod_rrdtool.Plo  mod_ssi_expr.Plo  mod_userdir.Plo  network_openssl.Po  network_posix_aio.Po  network_write.Po  network_writev.Po  plugin.Po  proc_open.Po  server.Po  stream.Po
lighttpd-bug-1806-1807/lighttpd/src/.libs/: mod_access.lai  mod_alias.lai  mod_cgi.lai  mod_chunked.lai  mod_compress.lai  mod_deflate.lai  mod_evhost.lai  mod_expire.lai  mod_flv_streaming.lai  mod_indexfile.lai  mod_magnet.lai  mod_mysql_vhost.lai  mod_postgresql_vhost.lai  mod_proxy_backend_http.la  mod_secdownload.lai  mod_setenv.lai  mod_sql_vhost_core.la  mod_staticfile.lai  mod_userdir.lai  mod_usertrack.lai  mod_webdav.lai
lighttpd-bug-1806-1807/lighttpd/src/.svn/: entries
lighttpd-bug-1806-1807/lighttpd/src/.svn/text-base/: SConscript.svn-base  array-static.h.svn-base  chunk.h.svn-base  configparser.y.svn-base  fcgi-stat-accel.c.svn-base  fdevent.h.svn-base  fdevent_linux_rtsig.c.svn-base  fdevent_linux_sysepoll.c.svn-base  fdevent_solaris_devpoll.c.svn-base  http_auth.c.svn-base  http_req.c.svn-base  http_req_range_test.c.svn-base  http_req_test.c.svn-base  http_resp_parser.y.svn-base  inet_ntop_cache.h.svn-base  iosocket.c.svn-base  joblist.c.svn-base  log.h.svn-base  mod_alias.c.svn-base  mod_cml_funcs.c.svn-base  mod_cml_lua.c.svn-base  mod_compress.c.svn-base  mod_dirlisting.c.svn-base  mod_evasive.c.svn-base  mod_expire.c.svn-base  mod_indexfile.c.svn-base  mod_postgresql_vhost.c.svn-base  mod_proxy.c.svn-base  mod_proxy_backend_fastcgi.c.svn-base  mod_proxy_core.c.svn-base  mod_proxy_core_rewrites.c.svn-base  mod_sql_vhost_core.h.svn-base  mod_ssi.c.svn-base  mod_trigger_b4_dl.c.svn-base  network.h.svn-base  network_backends.h.svn-base  network_posix_aio.c.svn-base  network_writev.c.svn-base  plugin.h.svn-base  proc_open.h.svn-base  (+7 more)
many-bugs/: .gitignore  Makefile  compile.sh  config-to-json.sh  disable-test-by-file-name.sh  download-all.sh  download.sh  problem.template.json  sanity-php.sh  sanity.sh  scenarios.txt  test.head.sh  tidy.sh
manybugs/: Makefile  bug-data.csv  manybugs.dataset.yaml
manymorebugs/: bugs.txt
openldap-2.3.41/: io.i-reference.debug  io.i.ast  io.i.path
php/: .gitignore  prepare.sh  sanity.sh  tidy.sh
php-5.2.1/: string.c
php-bug-2011-01-06-e7a1d5004e-3571c955b5/: compile.pl
php-bug-2011-01-09-7c6310852e-478e5d1dd0/: test.sh
(+21244 files in other folders)
